Fix overlapping layout and responsive issues

--- a/sec4.css
+++ b/sec4.css
@@ -224,12 +224,13 @@
     font-size:50px;
     font-weight: 600;
     font-family: Arial, sans-serif;
+    margin-bottom: 10px;
 
 }
 .sec5{
-    margin-top: -90px;
+    margin-top: 20px;
     padding-bottom: 0px;
-    margin-bottom: 0px;
+    margin-bottom: 50px;
     font-family: Arial, sans-serif;
 
 }
